# python-ai-project

./: README.md  pyproject.toml
AI多轮对话服务/: ai_partner.py
AI多轮对话服务/resources/: user.json
AI多轮对话服务/sessions/: 2026-05-13_12-35-51.json  2026-05-13_12-36-58.json
AI大模型RAG与智能体开发/LangChainRAG开发/: LangChain访问大模型.py
AI大模型RAG与智能体开发/LangChain组件学习/: 03 LangChain访问本地模型.py  04 LangChain调用聊天模型.py  08 StrOutputParser解析器.py  12 长期会话记忆.py  13 内存向量存储.py  原生DashScope测试.py
AI大模型RAG与智能体开发/LangChain组件学习/chat_history/: user_001
AI大模型RAG与智能体开发/LangChain组件学习/chroma_db/: chroma.sqlite3
AI大模型RAG与智能体开发/LangChain组件学习/data/: school_faq.csv
AI大模型RAG与智能体开发/RAG项目/: app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  md5.txt  rag.py  vector_stores.py
AI大模型RAG与智能体开发/RAG项目/chat_history/: user_001
AI大模型RAG与智能体开发/RAG项目/chroma_db/: chroma.sqlite3
rag_based_knowledge_base_multi_turn_qa_system/: 项目整合说明.md
rag_development/LangChain组件学习/: 01 向量_test.py  02 LangChain访问大模型.py  06 调用提示词模板.py  07 Chain基础使用.py  09 JsonOutputParser解析器.py  10 RunnableLambda基础使用.py  11 临时会话记忆.py  14 外部向量存储.py
rag_development/OpenAI库使用/: api_key_test.py
rag_development/RAG项目/: knowledge_base.py
rag_knowledge_qa_system/: config_data.py
src/python_ai_project_manager/: __init__.py  library.py
tests/: test_ai_project_library.py
企业知识库多轮智能问答系统_最新版/: .gitignore  README.md  app.py  knowledge_base.py  md5.txt  rag.py  requirements.txt  vector_stores.py
企业知识库多轮智能问答系统_最新版/demo_data/: 测试.txt
企业知识库多轮智能问答系统_最新版/学校规则测试文档/: 校园生活与综合服务规则.txt  食堂开放时间与餐饮服务规则.txt
(+1 files in other folders)
